# wield-iirrational

./: .gitignore  MANIFEST.in  NOTICE  NOTICE.license  README.md  README.md.license  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
docs/: .gitignore  API.rst  Makefile  README.md  alternatives.rst  bigindex.rst  conf.py  index.rst  installation.rst  tests.rst
docs/_static/: coverage  pytest-collection.html  reports  test_results
docs/_static/conda/: conda-env.txt  conda-export.txt  conda-list-nopip.txt  conda-list.txt  pip-freeze.txt  pip-list.txt  python-import1.txt  python-import2.txt
docs/related_code/: sspade.py
docs/testing/: .gitattributes  .gitignore  Makefile  conftest.py  modules
src/wavestate/iirrational/: __init__.py  _version.py  auto_version.py  data2testcase.py  pytest.py  pytest_.py  pytest_utilities.py  setup.py  svd.py  version.py
src/wavestate/iirrational/+IIRrational/: surrogate.m
src/wavestate/iirrational/LIGO/: __init__.py  conversion.py  foton.py  noise_model.py
src/wavestate/iirrational/TFmath/: TF.py  __init__.py  analytic_functionals.py  order_reduce.py  roots_bin.py  roots_matching.py  setup.py  statespace.py
src/wavestate/iirrational/annotate/: __init__.py  annotate.py  exporters.py  markdown.py
src/wavestate/iirrational/file_io/: __init__.py  any_io.py  csv_io.py  hdf5_io.py  ini_io.py  json_io.py  matlab_io.py  pickle_io.py  types.py  utilities.py  yaml_io.py
src/wavestate/iirrational/fitters_ZPK/: MRF.py  ZPKrep2MRF.py  __init__.py  data_filtfit_base.py  mappings.py
src/wavestate/iirrational/fitters_rational/: __init__.py  rational_algorithms.py  rational_attributes.py  rational_bases.py  rational_cheby.py  rational_disc.py
src/wavestate/iirrational/matlab/: __init__.py  __main__.py  testing.py  v1.py  v2.py
src/wavestate/iirrational/plots/: ZP.py  __init__.py  flags.py  overlays.py  plot_augment.py  plot_fit.py  plot_residuals.py  plots.py  rel_comparison.py  utilities.py
src/wavestate/iirrational/representations/: __init__.py  ratmath.py  residues.py  zpk_with_data.py  zpktf.py
src/wavestate/iirrational/statespace/: __init__.py  dense_builder.py
src/wavestate/iirrational/testing/: __init__.py  plots.py  random_sets.py  simple_set_1.py  utilities.py
src/wavestate/iirrational/utilities/: __init__.py  args.py  fake_aid.py  ipynb_lazy.py  np.py  print.py  strings.py
src/wavestate/iirrational/v1/: __init__.py  algorithms.py  data2filter.py  disc_sequence.py  disc_sequence_mag.py  fit_aid.py  hintsets.py  nyquist_move.py  order_reduce.py
src/wavestate/iirrational/v2/: AAA_fits.py  SNR_adjustments.py  SNR_estimate.py  __init__.py  __main__.py  autogen_docstr.py  data2filter.py  fit_aid.py  hintsets.py  order_reduce.py  phase_patch.py  rational_fits.py  results_aid.py  results_aid_adv.py  statespace.py  testing.py
src/wavestate/iirrational/v3/: __init__.py
src/wield/iirrational/: __init__.py  _version.py  data2testcase.py  setup.py  svd.py  version.py
src/wield/iirrational/+IIRrational/: surrogate.m
src/wield/iirrational/LIGO/: __init__.py  conversion.py  noise_model.py
src/wield/iirrational/TFmath/: TF.py  __init__.py  analytic_functionals.py  order_reduce.py  roots_bin.py  roots_matching.py  setup.py  statespace.py
src/wield/iirrational/annotate/: __init__.py  annotate.py  exporters.py  markdown.py
src/wield/iirrational/file_io/: __init__.py  any_io.py  csv_io.py  hdf5_io.py  ini_io.py  json_io.py  matlab_io.py  pickle_io.py  types.py  utilities.py  yaml_io.py
src/wield/iirrational/fitters_ZPK/: MRF.py  ZPKrep2MRF.py  __init__.py  data_filtfit_base.py  mappings.py
src/wield/iirrational/fitters_rational/: __init__.py  rational_algorithms.py  rational_attributes.py  rational_bases.py  rational_cheby.py  rational_disc.py
src/wield/iirrational/matlab/: __main__.py  testing.py  v1.py  v2.py
src/wield/iirrational/plots/: ZP.py  __init__.py  flags.py  overlays.py  plot_augment.py  plot_fit.py  plot_residuals.py  plots.py  rel_comparison.py  utilities.py
test/file_io/: test_files.py
test/fitter_ZPK/: test_S_fits.py  test_S_fits_cplx.py  test_Z_fits.py  test_delay.py  utilities.py
test/matlab/: test_connect.m  test_matlab.py  test_v1_fit.m
test/ratcheby/: test_cheby_convergence.py  test_poly_imcheby.py  test_poly_std.py
test/ratdisc/: test_disc_convergence.py
test/ratmath/: test_ZPK_math.py  test_root_chaser.py
test/residues/: test_residues.py
test/statespace/: SS.py  SS_inv.py  test_IFO_model.py  test_SS_algorithms.py  test_delay.py  test_matrix.py  test_statespace.py
test/v1/: test_L2P.py  test_quad_plot.py  test_simple.py  test_simple_digest.py
test/v1/one_offs/: test_plot.py
test/v2/: test_HTTS_v2.py  test_L2P_v2.py  test_h_infinity.py  test_kwargs_v2.py  test_oplev.py  test_quad_plot_v2.py  test_results.py  test_simple_v2.py
test/v2/intermittant/: test_alphas.py
test/v2/io/: test_io.py
tools/: check_versions.py
(+264 files in other folders)
