# -*- coding: utf-8 -*-
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: © 2021 Massachusetts Institute of Technology.
# SPDX-FileCopyrightText: © 2021 Lee McCuller <mcculler@caltech.edu>
# NOTICE: Contributors should add their name to copyright and document their contributions in NOTICE

[metadata]
name = wield.iirrational
version = 2.9.5.dev0

license = Apache-2.0
license_files = LICENSES/*, NOTICE

author = Lee McCuller
author_email = mcculler@caltech.edu

description = SISO System Identification tool
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/wieldphysics/wield-iirrational
project_urls =
    Bug Tracker = https://github.com/wieldphysics/wield-iirrational/issues
    Source Code = https://github.com/wieldphysics/wield-iirrational

classifiers =
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Topic :: Scientific/Engineering :: Physics

[options]
setup_requires = 'setuptools>=45.0.0'
install_requires =
    setuptools_scm>=6.0.0
    wield.bunch
    wield.utilities
package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src


[aliases]
test=pytest

[tools.check_versions]
    version_file = src/wield/iirrational/_version.py
